Fix Document Upload Removal Failing
- implement S3 delete of uploaded files when submission form type is changed
- refactor tests and add coverage
- modernise with final and var

Resolves:
ASM-2728