@@ -1,9 +1,31 @@
 package uk.gov.companieshouse.efs.api.submissions.service;
 
+import static org.hamcrest.CoreMatchers.equalTo;
+import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.CoreMatchers.nullValue;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.argThat;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.mockito.Mockito.when;
+
 import java.time.Clock;
+import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
+import java.util.Collections;
 import java.util.Optional;
+import java.util.stream.Stream;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -20,7 +42,6 @@ import uk.gov.companieshouse.api.model.efs.submissions.FileListApi;
 import uk.gov.companieshouse.api.model.efs.submissions.FormTypeApi;
 import uk.gov.companieshouse.api.model.efs.submissions.PresenterApi;
 import uk.gov.companieshouse.api.model.efs.submissions.SubmissionApi;
-import uk.gov.companieshouse.api.model.efs.submissions.SubmissionResponseApi;
 import uk.gov.companieshouse.api.model.efs.submissions.SubmissionStatus;
 import uk.gov.companieshouse.api.model.paymentsession.SessionApi;
 import uk.gov.companieshouse.api.model.paymentsession.SessionListApi;
@@ -46,46 +67,20 @@ import uk.gov.companieshouse.efs.api.submissions.validator.Validator;
 import uk.gov.companieshouse.efs.api.submissions.validator.exception.SubmissionValidationException;
 import uk.gov.companieshouse.efs.api.util.CurrentTimestampGenerator;
 
-import java.time.LocalDateTime;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Stream;
-
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.CoreMatchers.nullValue;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.argThat;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoInteractions;
-import static org.mockito.Mockito.verifyNoMoreInteractions;
-import static org.mockito.Mockito.when;
-
 @ExtendWith(MockitoExtension.class)
 class SubmissionServiceImplTest {
-    public static final String SESSION_ID = "2222222222";
-    public static final String SESSION_STATE =
+    public static final String PAY_SESSION_ID = "2222222222";
+    public static final String PAY_SESSION_STATE =
         "FD_RlzcLp-xcK1YZGEbn3ZpRHGlwy7tNjn_zsjYVauoB8Ml3GkfpmbhPuPd093XM";
-    private static final String SUBMISSION_ID = "123";
+    private static final String SUBMISSION_ID = "submission-id";
     public static final String STATUS_PAID = PaymentClose.Status.PAID.toString();
     private static final String STATUS_FAILED = PaymentClose.Status.FAILED.toString();
     private static final String STATUS_CANCELLED = PaymentClose.Status.CANCELLED.toString();
     public static final String EXPECTED_UPDATE_ERROR_MSG =
-        "Submission status for [123] wasn't in [OPEN, PAYMENT_REQUIRED, "
-            + "PAYMENT_FAILED], couldn't update";
+        "Submission status for [%s] wasn't in [OPEN, PAYMENT_REQUIRED, PAYMENT_FAILED], couldn't update".formatted(SUBMISSION_ID);
 
     public static final String EXPECTED_COMPLETE_ERROR_MSG =
-        "Submission status for [123] wasn't in [OPEN, PAYMENT_REQUIRED, "
-            + "PAYMENT_FAILED, SUBMITTED], couldn't update";
+        "Submission status for [%s] wasn't in [OPEN, PAYMENT_REQUIRED, PAYMENT_FAILED, SUBMITTED], couldn't update".formatted(SUBMISSION_ID);
     private static final LocalDateTime NOW = LocalDateTime.now();
 
     private SubmissionService submissionService;
@@ -139,8 +134,8 @@ class SubmissionServiceImplTest {
     @Test
     void testCreateSubmission() {
         // given
-        PresenterApi presenterApi = mock(PresenterApi.class);
-        Presenter presenter = mock(Presenter.class);
+        final var presenterApi = mock(PresenterApi.class);
+        final var presenter = mock(Presenter.class);
         when(presenterMapper.map(presenterApi)).thenReturn(presenter);
         when(timestampGenerator.generateTimestamp()).thenReturn(NOW);
 
@@ -157,14 +152,14 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionWithCompany() {
         // given
-        CompanyApi companyApi = mock(CompanyApi.class);
-        Company company = mock(Company.class);
+        final var companyApi = mock(CompanyApi.class);
+        final var company = mock(Company.class);
         when(companyMapper.map(companyApi)).thenReturn(company);
         when(submission.getStatus()).thenReturn(SubmissionStatus.OPEN);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionWithCompany(SUBMISSION_ID, companyApi);
+        final var actual = submissionService.updateSubmissionWithCompany(SUBMISSION_ID, companyApi);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
@@ -175,15 +170,15 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionWithCompanyNotFound() {
         // given
-        CompanyApi companyApi = mock(CompanyApi.class);
+        final var companyApi = mock(CompanyApi.class);
         when(submissionRepository.read(anyString())).thenReturn(null);
 
         // when
-        Executable actual = () -> submissionService.updateSubmissionWithCompany(SUBMISSION_ID, companyApi);
+        final Executable actual = () -> submissionService.updateSubmissionWithCompany(SUBMISSION_ID, companyApi);
 
         // then
-        SubmissionNotFoundException ex = assertThrows(SubmissionNotFoundException.class, actual);
-        assertEquals("Could not locate submission with id: [123]", ex.getMessage());
+        final var ex = assertThrows(SubmissionNotFoundException.class, actual);
+        assertEquals("Could not locate submission with id: [%s]".formatted(SUBMISSION_ID), ex.getMessage());
         verifyNoInteractions(companyMapper);
     }
 
@@ -191,15 +186,15 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionWithCompanyIncorrectState() {
         // given
-        CompanyApi companyApi = mock(CompanyApi.class);
+        final var companyApi = mock(CompanyApi.class);
         when(submission.getStatus()).thenReturn(SubmissionStatus.PROCESSING);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        Executable actual = () -> submissionService.updateSubmissionWithCompany(SUBMISSION_ID, companyApi);
+        final Executable actual = () -> submissionService.updateSubmissionWithCompany(SUBMISSION_ID, companyApi);
 
         // then
-        SubmissionIncorrectStateException ex = assertThrows(SubmissionIncorrectStateException.class, actual);
+        final var ex = assertThrows(SubmissionIncorrectStateException.class, actual);
         assertEquals(EXPECTED_UPDATE_ERROR_MSG, ex.getMessage());
         verifyNoInteractions(companyMapper);
     }
@@ -207,17 +202,17 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionWithForm() {
         // given
-        FormTypeApi formApi = mock(FormTypeApi.class);
+        final var formApi = mock(FormTypeApi.class);
         when(submission.getStatus()).thenReturn(SubmissionStatus.OPEN);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
+        final var actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
         verify(submissionRepository).updateSubmission(submissionCaptor.capture());
-        Submission updateSubmission = submissionCaptor.getValue();
+        final var updateSubmission = submissionCaptor.getValue();
         assertThat(updateSubmission.getFeeOnSubmission(), is(equalTo(submission.getFeeOnSubmission())));
         assertThat(updateSubmission.getFormDetails().getFormType(), is(equalTo(formApi.getFormType())));
     }
@@ -225,19 +220,19 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionWithFormWhenFormTypeNull() {
         // given
-        FormTypeApi formApi = mock(FormTypeApi.class);
+        final var formApi = mock(FormTypeApi.class);
 
         when(formApi.getFormType()).thenReturn(null);
         when(submission.getStatus()).thenReturn(SubmissionStatus.OPEN);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
+        final var actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
 
         // then
         assertThat(actual.getId(), is(SUBMISSION_ID));
         verify(submissionRepository).updateSubmission(submissionCaptor.capture());
-        Submission expected = submissionCaptor.getValue();
+        final var expected = submissionCaptor.getValue();
         assertThat(expected.getFeeOnSubmission(), is(nullValue()));
         assertThat(expected.getFormDetails().getFormType(), is(nullValue()));
         verifyNoInteractions(formTemplateService, paymentTemplateService);
@@ -248,7 +243,7 @@ class SubmissionServiceImplTest {
     }
     @ParameterizedTest
     @MethodSource("provideScenariosForUpdateSubmissionWithForm")
-    void testUpdateSubmissionWithFormScenarios(FormTypeApi formType) {
+    void testUpdateSubmissionWithFormScenarios(final FormTypeApi formType) {
         // given
         when(submission.getStatus()).thenReturn(SubmissionStatus.OPEN);
         when(submissionRepository.read(anyString())).thenReturn(submission);
@@ -256,12 +251,12 @@ class SubmissionServiceImplTest {
         when(formDetails.getFormType()).thenReturn(formType.getFormType());
 
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formType);
+        final var actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formType);
 
         // then
         assertThat(actual.getId(), is(SUBMISSION_ID));
         verify(submissionRepository).updateSubmission(submissionCaptor.capture());
-        Submission expected = submissionCaptor.getValue();
+        final var expected = submissionCaptor.getValue();
         if (formType.getFormType()==null) {
             assertThat(expected.getFeeOnSubmission(), is(nullValue()));
             assertThat(expected.getFormDetails().getFormType(), is(nullValue()));
@@ -277,14 +272,14 @@ class SubmissionServiceImplTest {
 
     @Test
     void  testUpdateSubmissionWithFormWhenFormDetailsNull() {
-        FormTypeApi formApi = mock(FormTypeApi.class);
+        final var formApi = mock(FormTypeApi.class);
         when(submission.getStatus()).thenReturn(SubmissionStatus.OPEN);
         when(submissionRepository.read(anyString())).thenReturn(submission);
         when(submission.getFormDetails()).thenReturn(null);
         when(formApi.getFormType()).thenReturn("abc");
 
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
+        final var actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
 
         // then
         assertThat(actual.getId(), is(SUBMISSION_ID));
@@ -296,8 +291,8 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionWithFormWhenFormTypeNotFound() {
         // given
-        FormTypeApi formApi = mock(FormTypeApi.class);
-        final String FORM_TYPE = "NOT_FOUND";
+        final var formApi = mock(FormTypeApi.class);
+        final var FORM_TYPE = "NOT_FOUND";
 
         when(formApi.getFormType()).thenReturn(FORM_TYPE);
         when(formTemplateService.getFormTemplate(FORM_TYPE)).thenReturn(null);
@@ -305,7 +300,7 @@ class SubmissionServiceImplTest {
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
+        final var actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
@@ -318,9 +313,9 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionWithFormWhenPaymentChargeNull() {
         // given
-        FormTypeApi formApi = mock(FormTypeApi.class);
-        FormTemplateApi formTemplateApi = mock(FormTemplateApi.class);
-        final String FORM_TYPE = "NULL_CHARGE";
+        final var formApi = mock(FormTypeApi.class);
+        final var formTemplateApi = mock(FormTemplateApi.class);
+        final var FORM_TYPE = "NULL_CHARGE";
 
         when(formApi.getFormType()).thenReturn(FORM_TYPE);
         when(formTemplateService.getFormTemplate(FORM_TYPE)).thenReturn(formTemplateApi);
@@ -329,7 +324,7 @@ class SubmissionServiceImplTest {
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
+        final var actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
@@ -340,10 +335,10 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionWithFormWhenPaymentTemplateNotFound() {
         // given
-        FormTypeApi formApi = mock(FormTypeApi.class);
-        FormTemplateApi formTemplateApi = mock(FormTemplateApi.class);
-        final String FORM_TYPE = "NULL_CHARGE";
-        final String PAYMENT_TEMPLATE = "PAYMENT";
+        final var formApi = mock(FormTypeApi.class);
+        final var formTemplateApi = mock(FormTemplateApi.class);
+        final var FORM_TYPE = "NULL_CHARGE";
+        final var PAYMENT_TEMPLATE = "PAYMENT";
 
         when(formApi.getFormType()).thenReturn(FORM_TYPE);
         when(formTemplateService.getFormTemplate(FORM_TYPE)).thenReturn(formTemplateApi);
@@ -353,7 +348,7 @@ class SubmissionServiceImplTest {
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
+        final var actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
@@ -363,12 +358,12 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionWithFormWhenPaymentTemplateFound() {
         // given
-        FormTypeApi formApi = mock(FormTypeApi.class);
-        FormTemplateApi formTemplateApi = mock(FormTemplateApi.class);
-        final String FORM_TYPE = "NULL_CHARGE";
-        final String PAYMENT_TEMPLATE = "PAYMENT";
-        final String PAYMENT_CHARGE = "99";
-        final PaymentTemplate template =
+        final var formApi = mock(FormTypeApi.class);
+        final var formTemplateApi = mock(FormTemplateApi.class);
+        final var FORM_TYPE = "NULL_CHARGE";
+        final var PAYMENT_TEMPLATE = "PAYMENT";
+        final var PAYMENT_CHARGE = "99";
+        final var template =
             PaymentTemplate.newBuilder()
                 .withItem(PaymentTemplate.Item.newBuilder().withAmount(PAYMENT_CHARGE).build())
                 .build();
@@ -381,7 +376,7 @@ class SubmissionServiceImplTest {
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
+        final var actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
@@ -391,13 +386,13 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionWithFormWhereFormDetailsAlreadyExist() {
         // given
-        FormTypeApi formApi = mock(FormTypeApi.class);
+        final var formApi = mock(FormTypeApi.class);
         when(submission.getStatus()).thenReturn(SubmissionStatus.OPEN);
         when(submission.getFormDetails()).thenReturn(formDetails);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
+        final var actual = submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
@@ -407,43 +402,43 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionWithFormNotFound() {
         // given
-        FormTypeApi formApi = mock(FormTypeApi.class);
+        final var formApi = mock(FormTypeApi.class);
         when(submissionRepository.read(anyString())).thenReturn(null);
 
         // when
-        Executable actual = () -> submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
+        final Executable actual = () -> submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
 
         // then
-        SubmissionNotFoundException ex = assertThrows(SubmissionNotFoundException.class, actual);
-        assertEquals("Could not locate submission with id: [123]", ex.getMessage());
+        final var ex = assertThrows(SubmissionNotFoundException.class, actual);
+        assertEquals("Could not locate submission with id: [%s]".formatted(SUBMISSION_ID), ex.getMessage());
     }
 
     @Test
     void testUpdateSubmissionWithFormIncorrectState() {
         // given
-        FormTypeApi formApi = mock(FormTypeApi.class);
+        final var formApi = mock(FormTypeApi.class);
         when(submission.getStatus()).thenReturn(SubmissionStatus.PROCESSING);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        Executable actual = () -> submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
+        final Executable actual = () -> submissionService.updateSubmissionWithForm(SUBMISSION_ID, formApi);
 
         // then
-        SubmissionIncorrectStateException ex = assertThrows(SubmissionIncorrectStateException.class, actual);
+        final var ex = assertThrows(SubmissionIncorrectStateException.class, actual);
         assertEquals(EXPECTED_UPDATE_ERROR_MSG, ex.getMessage());
     }
 
     @Test
     void testUpdateSubmissionWithFiles() {
         // given
-        FileListApi fileListApi = mock(FileListApi.class);
-        List<FileDetails> fileDetailsList = Collections.singletonList(mock(FileDetails.class));
+        final var fileListApi = mock(FileListApi.class);
+        final var fileDetailsList = Collections.singletonList(mock(FileDetails.class));
         when(fileDetailsMapper.map(fileListApi)).thenReturn(fileDetailsList);
         when(submission.getStatus()).thenReturn(SubmissionStatus.OPEN);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionWithFileDetails(SUBMISSION_ID, fileListApi);
+        final var actual = submissionService.updateSubmissionWithFileDetails(SUBMISSION_ID, fileListApi);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
@@ -454,15 +449,15 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionWithFilesWhereFormDetailsAlreadyExist() {
         // given
-        FileListApi fileListApi = mock(FileListApi.class);
-        List<FileDetails> fileDetailsList = Collections.singletonList(mock(FileDetails.class));
+        final var fileListApi = mock(FileListApi.class);
+        final var fileDetailsList = Collections.singletonList(mock(FileDetails.class));
         when(fileDetailsMapper.map(fileListApi)).thenReturn(fileDetailsList);
         when(submission.getStatus()).thenReturn(SubmissionStatus.OPEN);
         when(submission.getFormDetails()).thenReturn(formDetails);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionWithFileDetails(SUBMISSION_ID, fileListApi);
+        final var actual = submissionService.updateSubmissionWithFileDetails(SUBMISSION_ID, fileListApi);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
@@ -473,73 +468,98 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionWithFilesNotFound() {
         // given
-        FileListApi fileListApi = mock(FileListApi.class);
+        final var fileListApi = mock(FileListApi.class);
         when(submissionRepository.read(anyString())).thenReturn(null);
 
         // when
-        Executable actual = () -> submissionService.updateSubmissionWithFileDetails(SUBMISSION_ID, fileListApi);
+        final Executable actual = () -> submissionService.updateSubmissionWithFileDetails(SUBMISSION_ID, fileListApi);
 
         // then
-        SubmissionNotFoundException ex = assertThrows(SubmissionNotFoundException.class, actual);
-        assertEquals("Could not locate submission with id: [123]", ex.getMessage());
+        final var ex = assertThrows(SubmissionNotFoundException.class, actual);
+        assertEquals("Could not locate submission with id: [%s]".formatted(SUBMISSION_ID), ex.getMessage());
         verifyNoInteractions(fileDetailsMapper);
     }
 
     @Test
     void testUpdateSubmissionWithFilesIncorrectState() {
         // given
-        FileListApi fileListApi = mock(FileListApi.class);
+        final var fileListApi = mock(FileListApi.class);
         when(submission.getStatus()).thenReturn(SubmissionStatus.PROCESSING);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        Executable actual = () -> submissionService.updateSubmissionWithFileDetails(SUBMISSION_ID, fileListApi);
+        final Executable actual = () -> submissionService.updateSubmissionWithFileDetails(SUBMISSION_ID, fileListApi);
 
         // then
-        SubmissionIncorrectStateException ex = assertThrows(SubmissionIncorrectStateException.class, actual);
+        final var ex = assertThrows(SubmissionIncorrectStateException.class, actual);
         assertEquals(EXPECTED_UPDATE_ERROR_MSG, ex.getMessage());
         verifyNoInteractions(fileDetailsMapper);
     }
 
     @Test
+    void shouldClearSubmissionFilesWhenFormDetailsExist() {
+        when(submission.getStatus()).thenReturn(SubmissionStatus.OPEN);
+        when(submissionRepository.read(anyString())).thenReturn(submission);
+        when(submission.getFormDetails()).thenReturn(formDetails);
+
+        final var actual = submissionService.clearSubmissionFiles(SUBMISSION_ID);
+
+        assertThat(actual.getId(), is(SUBMISSION_ID));
+        verify(formDetails).setFileDetailsList(null);
+        verify(submissionRepository).updateSubmission(argThat(s -> s.getFormDetails().equals(formDetails)));
+    }
+
+    @Test
+    void shouldClearSubmissionFilesWhenFormDetailsDoNotExist() {
+        when(submission.getStatus()).thenReturn(SubmissionStatus.OPEN);
+        when(submissionRepository.read(anyString())).thenReturn(submission);
+        when(submission.getFormDetails()).thenReturn(null);
+
+        final var actual = submissionService.clearSubmissionFiles(SUBMISSION_ID);
+
+        assertThat(actual.getId(), is(SUBMISSION_ID));
+        verify(submissionRepository).updateSubmission(argThat(s -> s.getFormDetails() == null));
+    }
+
+    @Test
     void testUpdateSubmissionWithPaymentSessionsWhenOneExists() {
         // given
-        SessionApi sessionApi =
-            new SessionApi(SESSION_ID, SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
-        SessionListApi sessionListApi = new SessionListApi(Collections.singletonList(sessionApi));
+        final var sessionApi =
+            new SessionApi(PAY_SESSION_ID, PAY_SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
+        final var sessionListApi = new SessionListApi(Collections.singletonList(sessionApi));
 
         when(submission.getStatus()).thenReturn(SubmissionStatus.OPEN);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual =
+        final var actual =
             submissionService.updateSubmissionWithPaymentSessions(SUBMISSION_ID, sessionListApi);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
         verify(submissionRepository).updateSubmission(submissionCaptor.capture());
-        Submission expected = submissionCaptor.getValue();
+        final var expected = submissionCaptor.getValue();
         assertThat(expected.getPaymentSessions(), is(sessionListApi));
     }
 
     @Test
     void testUpdateSubmissionWithPaymentSessionsWhenNoneExist() {
         // given
-        SessionApi sessionApi =
-            new SessionApi(SESSION_ID, SESSION_STATE, PaymentTemplate.Status.PAID.toString());
-        SessionListApi sessionListApi = new SessionListApi(Collections.singletonList(sessionApi));
+        final var sessionApi =
+            new SessionApi(PAY_SESSION_ID, PAY_SESSION_STATE, PaymentTemplate.Status.PAID.toString());
+        final var sessionListApi = new SessionListApi(Collections.singletonList(sessionApi));
 
         when(submission.getStatus()).thenReturn(SubmissionStatus.PAYMENT_REQUIRED);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual =
+        final var actual =
             submissionService.updateSubmissionWithPaymentSessions(SUBMISSION_ID, sessionListApi);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
         verify(submissionRepository).updateSubmission(submissionCaptor.capture());
-        Submission expected = submissionCaptor.getValue();
+        final var expected = submissionCaptor.getValue();
         assertThat(expected.getPaymentSessions(), is(sessionListApi));
         assertThat(expected.getStatus(), is(SubmissionStatus.PAYMENT_REQUIRED));
     }
@@ -547,39 +567,39 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionWithPaymentSessionsWhenPaymentReferenceNotFound() {
         // given
-        SessionApi sessionApi =
-            new SessionApi(SESSION_ID, SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
-        SessionListApi sessionListApi = new SessionListApi(Collections.singletonList(sessionApi));
+        final var sessionApi =
+            new SessionApi(PAY_SESSION_ID, PAY_SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
+        final var sessionListApi = new SessionListApi(Collections.singletonList(sessionApi));
 
         when(submissionRepository.read(anyString())).thenReturn(null);
 
         // when
-        Executable actual =
+        final Executable actual =
             () -> submissionService.updateSubmissionWithPaymentSessions(SUBMISSION_ID,
                 sessionListApi);
 
         // then
-        SubmissionNotFoundException ex = assertThrows(SubmissionNotFoundException.class, actual);
-        assertEquals("Could not locate submission with id: [123]", ex.getMessage());
+        final var ex = assertThrows(SubmissionNotFoundException.class, actual);
+        assertEquals("Could not locate submission with id: [%s]".formatted(SUBMISSION_ID), ex.getMessage());
     }
 
     @Test
     void testUpdateSubmissionWithPaymentSessionsWhenIncorrectState() {
         // given
-        SessionApi sessionApi =
-            new SessionApi(SESSION_ID, SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
-        SessionListApi sessionListApi = new SessionListApi(Collections.singletonList(sessionApi));
+        final var sessionApi =
+            new SessionApi(PAY_SESSION_ID, PAY_SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
+        final var sessionListApi = new SessionListApi(Collections.singletonList(sessionApi));
 
         when(submission.getStatus()).thenReturn(SubmissionStatus.PROCESSING);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        Executable actual =
+        final Executable actual =
             () -> submissionService.updateSubmissionWithPaymentSessions(SUBMISSION_ID,
                 sessionListApi);
 
         // then
-        SubmissionIncorrectStateException ex =
+        final var ex =
             assertThrows(SubmissionIncorrectStateException.class, actual);
         assertEquals(EXPECTED_UPDATE_ERROR_MSG, ex.getMessage());
     }
@@ -593,13 +613,13 @@ class SubmissionServiceImplTest {
         when(timestampGenerator.generateTimestamp()).thenReturn(NOW.minusSeconds(1L))
             .thenReturn(NOW);
         // when
-        SubmissionResponseApi actual = submissionService.completeSubmission(SUBMISSION_ID);
+        final var actual = submissionService.completeSubmission(SUBMISSION_ID);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
         verify(timestampGenerator, times(2)).generateTimestamp();
         verify(submissionRepository).updateSubmission(submissionCaptor.capture());
-        Submission expected = submissionCaptor.getValue();
+        final var expected = submissionCaptor.getValue();
         assertThat(expected.getStatus(), is(SubmissionStatus.SUBMITTED));
         assertThat(expected.getSubmittedAt(), is(NOW.minusSeconds(1L)));
         assertThat(expected.getLastModifiedAt(), is(NOW));
@@ -617,7 +637,7 @@ class SubmissionServiceImplTest {
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual = submissionService.completeSubmission(SUBMISSION_ID);
+        final var actual = submissionService.completeSubmission(SUBMISSION_ID);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
@@ -636,14 +656,14 @@ class SubmissionServiceImplTest {
         when(timestampGenerator.generateTimestamp()).thenReturn(NOW);
 
         // when
-        SubmissionIncorrectStateException exception =
+        final var exception =
             assertThrows(SubmissionIncorrectStateException.class, () -> submissionService.completeSubmission(SUBMISSION_ID));
-        assertEquals("Submission status for [123] wasn't in [SUBMITTED], couldn't update", exception.getMessage());
+        assertEquals("Submission status for [%s] wasn't in [SUBMITTED], couldn't update".formatted(SUBMISSION_ID), exception.getMessage());
 
         // then
         verify(timestampGenerator, times(2)).generateTimestamp();
         verify(submissionRepository).updateSubmission(submissionCaptor.capture());
-        Submission updateSubmission = submissionCaptor.getValue();
+        final var updateSubmission = submissionCaptor.getValue();
         assertThat(updateSubmission.getStatus(), is(SubmissionStatus.SUBMITTED));
         assertThat(updateSubmission.getLastModifiedAt(), is(NOW));
         verify(validator).validate(submission);
@@ -658,7 +678,7 @@ class SubmissionServiceImplTest {
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual = submissionService.completeSubmission(SUBMISSION_ID);
+        final var actual = submissionService.completeSubmission(SUBMISSION_ID);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
@@ -674,7 +694,7 @@ class SubmissionServiceImplTest {
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        SubmissionResponseApi actual = submissionService.completeSubmission(SUBMISSION_ID);
+        final var actual = submissionService.completeSubmission(SUBMISSION_ID);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
@@ -692,10 +712,10 @@ class SubmissionServiceImplTest {
         doThrow(new SubmissionValidationException("bad data")).when(validator).validate(submission);
 
         // when
-        Executable actual = () -> submissionService.completeSubmission(SUBMISSION_ID);
+        final Executable actual = () -> submissionService.completeSubmission(SUBMISSION_ID);
 
         // then
-        SubmissionValidationException ex = assertThrows(SubmissionValidationException.class, actual);
+        final var ex = assertThrows(SubmissionValidationException.class, actual);
         assertEquals("bad data", ex.getMessage());
         verify(validator).validate(submission);
         verifyNoInteractions(emailService);
@@ -707,11 +727,11 @@ class SubmissionServiceImplTest {
         when(submissionRepository.read(anyString())).thenReturn(null);
 
         // when
-        Executable actual = () -> submissionService.completeSubmission(SUBMISSION_ID);
+        final Executable actual = () -> submissionService.completeSubmission(SUBMISSION_ID);
 
         // then
-        SubmissionNotFoundException ex = assertThrows(SubmissionNotFoundException.class, actual);
-        assertEquals("Could not locate submission with id: [123]", ex.getMessage());
+        final var ex = assertThrows(SubmissionNotFoundException.class, actual);
+        assertEquals("Could not locate submission with id: [%s]".formatted(SUBMISSION_ID), ex.getMessage());
         verifyNoInteractions(validator);
         verifyNoInteractions(emailService);
     }
@@ -723,10 +743,10 @@ class SubmissionServiceImplTest {
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        Executable actual = () -> submissionService.completeSubmission(SUBMISSION_ID);
+        final Executable actual = () -> submissionService.completeSubmission(SUBMISSION_ID);
 
         // then
-        SubmissionIncorrectStateException ex = assertThrows(SubmissionIncorrectStateException.class, actual);
+        final var ex = assertThrows(SubmissionIncorrectStateException.class, actual);
         assertEquals(EXPECTED_COMPLETE_ERROR_MSG, ex.getMessage());
         verifyNoInteractions(validator);
         verifyNoInteractions(emailService);
@@ -740,12 +760,12 @@ class SubmissionServiceImplTest {
         when(submission.getId()).thenReturn(SUBMISSION_ID);
         when(formDetails.getFileDetailsList()).thenReturn(Collections.singletonList(fileDetails));
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionQueued(submission);
+        final var actual = submissionService.updateSubmissionQueued(submission);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
         verify(submissionRepository).updateSubmission(submissionCaptor.capture());
-        Submission updateSubmission = submissionCaptor.getValue();
+        final var updateSubmission = submissionCaptor.getValue();
         assertThat(updateSubmission.getStatus(), is(SubmissionStatus.PROCESSING));
         assertThat(updateSubmission.getLastModifiedAt(), is(NOW));
 
@@ -757,7 +777,7 @@ class SubmissionServiceImplTest {
         when(submissionRepository.read(SUBMISSION_ID)).thenReturn(submission);
         when(submissionMapper.map(submission)).thenReturn(submissionApi);
         // when
-        SubmissionApi actual = submissionService.readSubmission(SUBMISSION_ID);
+        final var actual = submissionService.readSubmission(SUBMISSION_ID);
         // then
         assertEquals(submissionApi, actual);
         verify(submissionRepository).read(SUBMISSION_ID);
@@ -767,7 +787,7 @@ class SubmissionServiceImplTest {
     @Test
     void testReadSubmissionDoesNotMapMissingSubmission() {
         // when
-        SubmissionApi actual = submissionService.readSubmission(SUBMISSION_ID);
+        final var actual = submissionService.readSubmission(SUBMISSION_ID);
 
         // then
         assertNull(actual);
@@ -778,9 +798,9 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionBarcode() {
         // given
-        String barcode = "Y1234ABCD";
+        final var barcode = "Y1234ABCD";
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionBarcode(SUBMISSION_ID, barcode);
+        final var actual = submissionService.updateSubmissionBarcode(SUBMISSION_ID, barcode);
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
         verify(submissionRepository).updateBarcode(SUBMISSION_ID, barcode);
@@ -789,7 +809,7 @@ class SubmissionServiceImplTest {
     @Test
     void testUpdateSubmissionStatus() {
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionStatus(SUBMISSION_ID,
+        final var actual = submissionService.updateSubmissionStatus(SUBMISSION_ID,
                 SubmissionStatus.ACCEPTED);
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
@@ -815,7 +835,7 @@ class SubmissionServiceImplTest {
         when(submission.getStatus()).thenReturn(SubmissionStatus.OPEN);
         when(submissionRepository.read(anyString())).thenReturn(submission);
         // when
-        SubmissionResponseApi actual = submissionService.updateSubmissionConfirmAuthorised(SUBMISSION_ID, true);
+        final var actual = submissionService.updateSubmissionConfirmAuthorised(SUBMISSION_ID, true);
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
         verify(submissionRepository).updateSubmission(argThat(s->s.getConfirmAuthorised().equals(Boolean.TRUE)));
@@ -824,39 +844,39 @@ class SubmissionServiceImplTest {
     @Test
     void updateSubmissionWithPaymentOutcomeWhenNotFound() {
         // given
-        final PaymentClose paymentClose = new PaymentClose(SESSION_ID, PaymentClose.Status.FAILED);
+        final var paymentClose = new PaymentClose(PAY_SESSION_ID, PaymentClose.Status.FAILED);
 
         when(submissionRepository.read(SUBMISSION_ID)).thenReturn(null);
 
         // when
-        final SubmissionNotFoundException exception =
+        final var exception =
             assertThrows(SubmissionNotFoundException.class,
                 () -> submissionService.updateSubmissionWithPaymentOutcome(SUBMISSION_ID,
                     paymentClose));
 
         // then
-        assertThat(exception.getMessage(), is("Could not locate submission with id: [123]"));
+        assertThat(exception.getMessage(), is("Could not locate submission with id: [%s]".formatted(SUBMISSION_ID)));
         verifyNoMoreInteractions(submission);
     }
 
     @Test
     void updateSubmissionWithPaymentOutcomeWhenIncorrectStatus() {
         // given
-        final PaymentClose paymentClose = new PaymentClose(SESSION_ID, PaymentClose.Status.FAILED);
-        final SessionApi paySession =
-            new SessionApi(SESSION_ID, SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
+        final var paymentClose = new PaymentClose(PAY_SESSION_ID, PaymentClose.Status.FAILED);
+        final var paySession =
+            new SessionApi(PAY_SESSION_ID, PAY_SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
 
         expectSubmissionWithPaymentSession(SubmissionStatus.PAYMENT_FAILED, paySession);
         when(submissionRepository.read(SUBMISSION_ID)).thenReturn(submission);
         when(submission.getId()).thenReturn(SUBMISSION_ID);
 
         // when
-        final SubmissionResponseApi actual =
+        final var actual =
             submissionService.updateSubmissionWithPaymentOutcome(SUBMISSION_ID, paymentClose);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
-        assertThat(submission.getPaymentSessions().get(0).getSessionStatus(),
+        assertThat(submission.getPaymentSessions().getFirst().getSessionStatus(),
             is(STATUS_FAILED));
         verifyNoMoreInteractions(submission, emailService);
 
@@ -865,9 +885,9 @@ class SubmissionServiceImplTest {
     @Test
     void updateSubmissionWithPaymentOutcomeWhenPaidBeforeCompletion() {
         // given
-        final PaymentClose paymentClose = new PaymentClose(SESSION_ID, PaymentClose.Status.PAID);
-        final SessionApi paySession =
-            new SessionApi(SESSION_ID, SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
+        final var paymentClose = new PaymentClose(PAY_SESSION_ID, PaymentClose.Status.PAID);
+        final var paySession =
+            new SessionApi(PAY_SESSION_ID, PAY_SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
 
         expectSubmissionWithPaymentSession(SubmissionStatus.PAYMENT_REQUIRED, paySession);
         when(submissionRepository.read(SUBMISSION_ID)).thenReturn(submission);
@@ -875,16 +895,16 @@ class SubmissionServiceImplTest {
         when(timestampGenerator.generateTimestamp()).thenReturn(NOW);
 
         // when
-        final SubmissionResponseApi actual =
+        final var actual =
             submissionService.updateSubmissionWithPaymentOutcome(SUBMISSION_ID, paymentClose);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
-        assertThat(submission.getPaymentSessions().get(0).getSessionStatus(),
+        assertThat(submission.getPaymentSessions().getFirst().getSessionStatus(),
             is(STATUS_PAID));
         verify(timestampGenerator).generateTimestamp();
         verify(submissionRepository).updateSubmission(submissionCaptor.capture());
-        Submission updateSubmission = submissionCaptor.getValue();
+        final var updateSubmission = submissionCaptor.getValue();
         assertThat(updateSubmission.getStatus(), is(SubmissionStatus.SUBMITTED));
         assertThat(updateSubmission.getLastModifiedAt(), is(NOW));
         verifyNoMoreInteractions(emailService);
@@ -894,21 +914,21 @@ class SubmissionServiceImplTest {
     @Test
     void updateSubmissionWithPaymentOutcomeWhenFailedBeforeCompletion() {
         // given
-        final PaymentClose paymentClose = new PaymentClose(SESSION_ID, PaymentClose.Status.FAILED);
-        final SessionApi paySession =
-            new SessionApi(SESSION_ID, SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
+        final var paymentClose = new PaymentClose(PAY_SESSION_ID, PaymentClose.Status.FAILED);
+        final var paySession =
+            new SessionApi(PAY_SESSION_ID, PAY_SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
 
         expectSubmissionWithPaymentSession(SubmissionStatus.OPEN, paySession);
         when(submissionRepository.read(SUBMISSION_ID)).thenReturn(submission);
         when(submission.getId()).thenReturn(SUBMISSION_ID);
 
         // when
-        final SubmissionResponseApi actual =
+        final var actual =
             submissionService.updateSubmissionWithPaymentOutcome(SUBMISSION_ID, paymentClose);
 
         // then
         assertEquals(SUBMISSION_ID, actual.getId());
-        assertThat(submission.getPaymentSessions().get(0).getSessionStatus(),
+        assertThat(submission.getPaymentSessions().getFirst().getSessionStatus(),
             is(STATUS_FAILED));
         verifyNoMoreInteractions(submission, emailService);
     }
@@ -916,17 +936,17 @@ class SubmissionServiceImplTest {
     @Test
     void updateSubmissionWithPaymentOutcomeWhenPaymentSessionNotMatched() {
         // given
-        final PaymentClose paymentClose =
-            new PaymentClose(SESSION_ID + "X", PaymentClose.Status.FAILED);
-        final SessionApi sessionApi =
-            new SessionApi(SESSION_ID, SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
+        final var paymentClose =
+            new PaymentClose(PAY_SESSION_ID + "X", PaymentClose.Status.FAILED);
+        final var sessionApi =
+            new SessionApi(PAY_SESSION_ID, PAY_SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
 
         expectSubmissionWithPaymentSession(SubmissionStatus.OPEN, sessionApi);
         when(submission.getStatus()).thenReturn(SubmissionStatus.OPEN);
         when(submissionRepository.read(SUBMISSION_ID)).thenReturn(submission);
 
         // when
-        final SubmissionIncorrectStateException exception =
+        final var exception =
             assertThrows(SubmissionIncorrectStateException.class,
                 () -> submissionService.updateSubmissionWithPaymentOutcome(SUBMISSION_ID,
                     paymentClose));
@@ -938,9 +958,9 @@ class SubmissionServiceImplTest {
     @Test
     void updateSubmissionWithPaymentOutcomeWhenSessionMatchedAndPaid() {
         // given
-        final PaymentClose paymentClose = new PaymentClose(SESSION_ID, PaymentClose.Status.PAID);
-        SessionApi sessionApi =
-            new SessionApi(SESSION_ID, SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
+        final var paymentClose = new PaymentClose(PAY_SESSION_ID, PaymentClose.Status.PAID);
+        final var sessionApi =
+            new SessionApi(PAY_SESSION_ID, PAY_SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
 
         expectSubmissionWithPaymentSession(SubmissionStatus.PAYMENT_REQUIRED, sessionApi);
         when(submission.getId()).thenReturn(SUBMISSION_ID);
@@ -952,14 +972,14 @@ class SubmissionServiceImplTest {
         when(timestampGenerator.generateTimestamp()).thenReturn(NOW);
 
         // when
-        final SubmissionResponseApi actual =
+        final var actual =
             submissionService.updateSubmissionWithPaymentOutcome(SUBMISSION_ID, paymentClose);
 
         assertThat(actual.getId(), is(SUBMISSION_ID));
-        assertThat(submission.getPaymentSessions().get(0).getSessionStatus(), is(STATUS_PAID));
+        assertThat(submission.getPaymentSessions().getFirst().getSessionStatus(), is(STATUS_PAID));
         verify(timestampGenerator).generateTimestamp();
         verify(submissionRepository).updateSubmission(submissionCaptor.capture());
-        Submission updateSubmission = submissionCaptor.getValue();
+        final var updateSubmission = submissionCaptor.getValue();
         assertThat(updateSubmission.getStatus(), is(SubmissionStatus.SUBMITTED));
         assertThat(updateSubmission.getSubmittedAt(), is(NOW));
         assertThat(updateSubmission.getLastModifiedAt(), is(NOW));
@@ -968,9 +988,9 @@ class SubmissionServiceImplTest {
     @Test
     void updateSubmissionWithPaymentOutcomeWhenSessionMatchedAndFailed() {
         // given
-        final PaymentClose paymentClose = new PaymentClose(SESSION_ID, PaymentClose.Status.FAILED);
-        SessionApi sessionApi =
-            new SessionApi(SESSION_ID, SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
+        final var paymentClose = new PaymentClose(PAY_SESSION_ID, PaymentClose.Status.FAILED);
+        final var sessionApi =
+            new SessionApi(PAY_SESSION_ID, PAY_SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
 
         expectSubmissionWithPaymentSession(SubmissionStatus.PAYMENT_REQUIRED, sessionApi);
         when(submissionRepository.read(anyString())).thenReturn(submission);
@@ -978,11 +998,11 @@ class SubmissionServiceImplTest {
 
 
         // when
-        final SubmissionResponseApi actual =
+        final var actual =
             submissionService.updateSubmissionWithPaymentOutcome(SUBMISSION_ID, paymentClose);
 
         assertThat(actual.getId(), is(SUBMISSION_ID));
-        assertThat(submission.getPaymentSessions().get(0).getSessionStatus(), is(STATUS_FAILED));
+        assertThat(submission.getPaymentSessions().getFirst().getSessionStatus(), is(STATUS_FAILED));
         verify(submissionRepository).read(SUBMISSION_ID);
         verify(submissionRepository).updateSubmission(argThat(s->s.getStatus() == SubmissionStatus.PAYMENT_FAILED));
     }
@@ -990,19 +1010,19 @@ class SubmissionServiceImplTest {
     @Test
     void updateSubmissionWithPaymentOutcomeWhenSessionMatchedAndCancelled() {
         // given
-        final PaymentClose paymentClose = new PaymentClose(SESSION_ID, PaymentClose.Status.CANCELLED);
-        SessionApi sessionApi =
-                new SessionApi(SESSION_ID, SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
+        final var paymentClose = new PaymentClose(PAY_SESSION_ID, PaymentClose.Status.CANCELLED);
+        final var sessionApi =
+                new SessionApi(PAY_SESSION_ID, PAY_SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
 
         expectSubmissionWithPaymentSession(SubmissionStatus.PAYMENT_REQUIRED, sessionApi);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        final SubmissionResponseApi actual =
+        final var actual =
                 submissionService.updateSubmissionWithPaymentOutcome(SUBMISSION_ID, paymentClose);
 
         assertThat(actual.getId(), is(SUBMISSION_ID));
-        assertThat(submission.getPaymentSessions().get(0).getSessionStatus(), is(STATUS_CANCELLED));
+        assertThat(submission.getPaymentSessions().getFirst().getSessionStatus(), is(STATUS_CANCELLED));
         verify(submissionRepository, never()).updateSubmission(any(Submission.class));
         verify(submissionRepository).read(SUBMISSION_ID);
         verifyNoMoreInteractions(submissionRepository);
@@ -1012,19 +1032,19 @@ class SubmissionServiceImplTest {
     @Test
     void updateSubmissionWithPaymentOutcomeWhenPaymentAlreadyFailed() {
         // given
-        final PaymentClose paymentClose = new PaymentClose(SESSION_ID, PaymentClose.Status.FAILED);
-        SessionApi sessionApi =
-                new SessionApi(SESSION_ID, SESSION_STATE, PaymentClose.Status.FAILED.toString());
+        final var paymentClose = new PaymentClose(PAY_SESSION_ID, PaymentClose.Status.FAILED);
+        final var sessionApi =
+                new SessionApi(PAY_SESSION_ID, PAY_SESSION_STATE, PaymentClose.Status.FAILED.toString());
 
         expectSubmissionWithPaymentSession(SubmissionStatus.PAYMENT_FAILED, sessionApi);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        final SubmissionResponseApi actual =
+        final var actual =
                 submissionService.updateSubmissionWithPaymentOutcome(SUBMISSION_ID, paymentClose);
 
         assertThat(actual.getId(), is(SUBMISSION_ID));
-        assertThat(submission.getPaymentSessions().get(0).getSessionStatus(), is(STATUS_FAILED));
+        assertThat(submission.getPaymentSessions().getFirst().getSessionStatus(), is(STATUS_FAILED));
         verify(submissionRepository, never()).updateSubmission(any(Submission.class));
         verifyNoMoreInteractions(submissionRepository);
     }
@@ -1032,15 +1052,15 @@ class SubmissionServiceImplTest {
     @Test
     void updateSubmissionWithPaymentOutcomeWhenPaymentError() {
         // given
-        final PaymentClose paymentClose = new PaymentClose(SESSION_ID, PaymentClose.Status.ERROR);
-        SessionApi sessionApi =
-            new SessionApi(SESSION_ID, SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
+        final var paymentClose = new PaymentClose(PAY_SESSION_ID, PaymentClose.Status.ERROR);
+        final var sessionApi =
+            new SessionApi(PAY_SESSION_ID, PAY_SESSION_STATE, PaymentTemplate.Status.PENDING.toString());
 
         expectSubmissionWithPaymentSession(SubmissionStatus.PAYMENT_REQUIRED, sessionApi);
         when(submissionRepository.read(anyString())).thenReturn(submission);
 
         // when
-        final SubmissionResponseApi actual =
+        final var actual =
             submissionService.updateSubmissionWithPaymentOutcome(SUBMISSION_ID, paymentClose);
 
         assertThat(actual.getId(), is(SUBMISSION_ID));
@@ -1050,7 +1070,7 @@ class SubmissionServiceImplTest {
 
     private void expectSubmissionWithPaymentSession(final SubmissionStatus submissionStatus,
         final SessionApi sessionApi) {
-        final SessionListApi sessionListApi =
+        final var sessionListApi =
             new SessionListApi(Collections.singletonList(sessionApi));
 
         when(submission.getStatus()).thenReturn(submissionStatus);
